--- a/components/Cocktail/Cocktail.scss
+++ b/components/Cocktail/Cocktail.scss
@@ -123,6 +123,20 @@
         .recipeCocktail{
             width: 60%;
             font-size: 1.2rem;
+
+            .presentationCocktail::-webkit-scrollbar{
+                width: 1rem;
+                background-color: transparent;
+                border-radius: 10px;
+            }
+            .presentationCocktail::-webkit-scrollbar-thumb-track{
+                display: none;
+            }
+            .presentationCocktail::-webkit-scrollbar-thumb{
+                border-radius: 10px;
+                background-color: #682f2f;
+            }
+
         }
 
         .containerButton{
