imgCocktail position remove bottom add top

--- a/src/components/Cocktail/Cocktail.scss
+++ b/src/components/Cocktail/Cocktail.scss
@@ -22,7 +22,7 @@
 
     .imgCocktail{
         position: absolute;
-        bottom: 6%;
+        top: 25%;
         left: 50%;
         transform: translate(-50%);
         width: 16rem;
