--- a/src/components/Cocktail/Cocktail.scss
+++ b/src/components/Cocktail/Cocktail.scss
@@ -104,6 +104,82 @@
     }
 }
 
+@media screen and (min-height: 720px) {
+
+    .cocktail{
+
+        .imgCocktail{
+            position: absolute;
+            top: 35%;
+            left: 50%;
+            transform: translate(-50%);
+            width: 16rem;
+            margin: auto;
+            animation-name: rightToleft;
+            animation-duration: 1s;
+        }
+
+    }
+    
+}
+
+@media screen and (min-height: 800px) {
+
+    .cocktail{
+
+        .imgCocktail{
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%);
+            width: 16rem;
+            margin: auto;
+            animation-name: rightToleft;
+            animation-duration: 1s;
+        }
+
+    }
+    
+}
+
+@media screen and (min-height: 1000px) {
+
+    .cocktail{
+
+        .imgCocktail{
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%);
+            width: 16rem;
+            margin: auto;
+            animation-name: rightToleft;
+            animation-duration: 1s;
+        }
+
+    }
+    
+}
+
+@media screen and (min-height: 1300px) {
+
+    .cocktail{
+
+        .imgCocktail{
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            transform: translate(-50%);
+            width: 16rem;
+            margin: auto;
+            animation-name: rightToleft;
+            animation-duration: 1s;
+        }
+
+    }
+    
+}
+
 @media screen and (min-width: 768px) {
 
     .formSearch{
